[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/ground_floor.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LivingRoomHoover.gd" type="Script" id=2]
[ext_resource path="res://Sprites/livingroom_floor_dirt.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Methods.gd" type="Script" id=5]
[ext_resource path="res://Fonts/RussoOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Undo.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Button.gd" type="Script" id=8]
[ext_resource path="res://Scripts/CheckUI.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 6 )

[node name="App" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1184.0
mouse_filter = 2
color = Color( 0.243137, 0.392157, 0.360784, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_right = 576.0
margin_bottom = 100.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/HBoxContainer"]
margin_left = 410.0
margin_right = 576.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20

[node name="Button" type="Button" parent="UI/HBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 146.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Undo"
script = ExtResource( 8 )

[node name="GroundFloor" type="Node2D" parent="."]

[node name="GroundFloors" type="Sprite" parent="GroundFloor"]
texture = ExtResource( 1 )
centered = false

[node name="CleaningArea\'s" type="Node2D" parent="GroundFloor"]

[node name="LivingRoomHoover" type="Area2D" parent="GroundFloor/CleaningArea\'s"]
script = ExtResource( 2 )
clean_frequency = {
"days": 0,
"hours": 0,
"mins": 0,
"secs": 10
}

[node name="Dirt" type="Sprite" parent="GroundFloor/CleaningArea\'s/LivingRoomHoover"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GroundFloor/CleaningArea\'s/LivingRoomHoover"]
polygon = PoolVector2Array( 349.609, 330.125, 547.266, 329.313, 548.927, 892.948, 280.78, 890.08, 287.232, 861.401, 234.893, 766.761, 241.346, 589.669, 345.307, 588.952, 346.741, 450.577 )

[node name="CheckUI" type="Node2D" parent="."]
position = Vector2( 0, -1000 )
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="CheckUI"]
margin_top = 500.0
margin_right = 576.0
margin_bottom = 720.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CheckUI/VBoxContainer"]
margin_right = 576.0
margin_bottom = 125.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CheckUI/VBoxContainer/HBoxContainer2"]
margin_left = 86.0
margin_right = 489.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.941176, 0.0196078, 0.0196078, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Do you want to 
clean?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CheckUI/VBoxContainer"]
margin_top = 141.0
margin_right = 576.0
margin_bottom = 220.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="CheckUI/VBoxContainer/HBoxContainer"]
margin_left = 113.0
margin_right = 263.0
margin_bottom = 79.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 3 )
text = "Yes"

[node name="No" type="Button" parent="CheckUI/VBoxContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 463.0
margin_bottom = 79.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = SubResource( 3 )
text = "No"

[node name="Settings" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Methods" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Undo" type="Node2D" parent="."]
script = ExtResource( 7 )
[connection signal="pressed" from="UI/HBoxContainer/MarginContainer/Button" to="UI/HBoxContainer/MarginContainer/Button" method="_on_Button_pressed"]
[connection signal="input_event" from="GroundFloor/CleaningArea's/LivingRoomHoover" to="GroundFloor/CleaningArea's/LivingRoomHoover" method="_on_LivingRoomHoover_input_event"]
[connection signal="pressed" from="CheckUI/VBoxContainer/HBoxContainer/Yes" to="CheckUI" method="_on_Yes_pressed"]
[connection signal="pressed" from="CheckUI/VBoxContainer/HBoxContainer/No" to="CheckUI" method="_on_No_pressed"]
